# rlzap

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  benchmark.cpp  index_check.cpp  index_decompress.cpp  index_extract.cpp  index_stats.cpp  ms_dump.cpp  parsing_process.cpp  rlz_build.cpp  rlzap.sublime-project  rlzap_build.cpp  space_breakdown.cpp  wrapper_test.cpp
CMakeModules/: Cpp11.cmake  FindPAPI.cmake  NinjaColorFix.cmake  ReleaseDefault.cmake  cotire_no_debug.cmake  submodules.cmake
example/: CMakeLists.txt  README  rlz_examples.cpp
ext_libs/boost/: CMakeLists.txt
ext_libs/boost/include/boost/config/: user.hpp
ext_libs/sais/: CMakeLists.txt
include/rlz/: alphabet.hpp  api.hpp  bit_vectors.hpp  bitset_iterator.hpp  bitsets.hpp  build_coordinator.hpp  cache_settings.hpp  check_random.hpp  classic_parse.hpp  classic_parse_keeper.hpp  containers.hpp  diff_iterator.hpp  dna_packer.hpp  dumper.hpp  fractional_container.hpp  generic_caller.hpp  get_matchings.hpp  index.hpp  int_vector.hpp  integer_pack.hpp  integer_type.hpp  io.hpp  lcp_pack.hpp  literal_keeper.hpp  match.hpp  match_serialize.hpp  matching_parser.hpp  parse.hpp  parse_keeper.hpp  parse_rlzap.hpp  prefix_sum.hpp  reference_wrap.hpp  sa_compute.hpp  sparse_dense_vector.hpp  static_table_generation.hpp  trivial_prefix.hpp  type_listing.hpp  type_name.hpp  type_utils.hpp
include/rlz/impl/: alphabet.hpp  api.hpp  bit_vectors.hpp  differential_iterator.hpp  get_matchings.hpp  int_vector.hpp  parse_keeper.hpp  prefix_sum.hpp  type_unpack.hpp
include/rlz/lcp/: api.hpp  coordinator.hpp  index.hpp  index_iterator.hpp  parse.hpp
include/rlz/lcp/impl/: api.hpp
include/rlz/sdsl_extensions/: int_vector.hpp  lcp_byte.hpp  sd_vector.hpp  serialize.hpp
libs/: cache.cpp  io.cpp  trivial_prefix.cpp
tests/: CMakeLists.txt  api.cpp  bit_vectors.cpp  classic_literal_keeper.cpp  classic_parse.cpp  classic_parse_keeper.cpp  coord_observer.hpp  coordinator.cpp  cumulative.cpp  diff_iterator.cpp  dna_pack.cpp  fractional_byte_vector.cpp  get_matchings.cpp  index.cpp  int_vector.cpp  int_vector_specialization.cpp  lcp_api.cpp  lcp_coordinator.cpp  lcp_index.cpp  lcp_pack.cpp  literal_keeper.cpp  no_random_access.cpp  parse_keeper.cpp  parse_lcp.cpp  parse_rlzap.cpp  sa_getter.cpp  serialize.hpp  serialize_matches.cpp  sla_build_index.cpp  sla_create.cpp  sla_print.cpp  sla_test_index.cpp  sparse_dense_vectors.cpp  static_table.cpp
tests/include/: parse_coord_common.hpp  sla.hpp
tests/libs/: sla.cpp
